[package]
name = "crypt_utils"
version = "0.2.0"
authors = ["dwrickey <d.wrickey@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["classical", "crytography"]
description = "Utilities for simple classical cryptography"
homepage = "https://crates.io/crates/crypt_utils"
repository = "https://github.com/Grimmslaw/crypt_utils.git"
readme = "README.md"

[dependencies]

